fixed flexbox to wrap items in postlist

--- a/src/components/PostLink/PostLink.css
+++ b/src/components/PostLink/PostLink.css
@@ -1,11 +1,12 @@
 .post-wrapper {
   min-width: 400px;
-  min-height: 400px;
+  min-height: 300px;
   position: relative;
-  background-color: indianred;
+  background-color: rgb(248, 248, 248);
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 10px;
 }
 .image-wrapper {
   width: 100%;
@@ -14,7 +15,7 @@
   z-index: 0;
 }
 .image-overlay {
-  background-color: rgba(0, 0, 0, 0.932);
+  /* background-color: rgba(0, 0, 0, 0.932); */
   z-index: 1;
   position: relative;
   width: 100%;
