--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -1,6 +1,6 @@
 .post-list-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
   background-color: grey;
 }
